# certification-errbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.production  README.md  config.py  conftest.py  docker-compose.yml  pyproject.toml  rockcraft.yaml
.github/workflows/: charm_tests.yaml  check-for-client-library-changes.yaml  generate-test-observer-client.yaml  integration_test.yaml  lint.yaml  publish.yaml  terraform_test.yaml  unit_test.yaml
charm/: .gitignore  charmcraft.yaml  spread.yaml  tox.ini
charm/src/: charm.py
charm/tests/integration/: test_charm.py
charm/tests/spread/integration/: task.yaml
charm/tests/unit/: test_charm.py
config/: config.py
plugins/c3/: c3.plug  c3.py  ssl_fix.py
plugins/c3/lib/: c3_client.py
plugins/certification/: artefacts.py  c3_auth.py  certification.plug  certification.py  github.py  jira_api.py  ldap.py  llm_api.py  mattermost_api.py  mattermost_api_client.py  pr_cache.py  ssl_fix.py  user_handle_cache.py
plugins/certification/c3/: __init__.py
plugins/certification/c3/models/: __init__.py  account.py  bios.py  bus_enum.py  certified_configuration.py  certified_configuration_details.py  certified_configuration_details_network_item.py  certified_configuration_details_notes_item.py  certified_configuration_details_processor_item.py  certified_configuration_details_video_item.py  certified_configuration_details_wireless_item.py  certified_configuration_device.py  (+57 more)
plugins/certification/formatting/: __init__.py  digest.py  jira_formatter.py  pr_formatter.py
plugins/certification/jira_integration/: __init__.py  cache.py  client.py  priority.py
plugins/certification/pr_cache_utils/: __init__.py  pr_categorizer.py  review_checker.py
plugins/certification/test_observer/: __init__.py
plugins/test_observer/: test_observer.py
terraform/: .gitignore  main.tf  variables.tf  versions.tf
tests/: test_artefacts_logic.py  test_certification_bot_commands.py  test_jira_api.py  test_jira_formatter_none_handling.py  test_jira_priority_sorting.py  test_ldap.py  test_llm_api.py  test_pr_cache_refresh.py  test_pr_cache_stats.py  test_pr_cache_team_members.py  test_pr_changes_requested.py
(+170 files in other folders)
